list/array literal expando implemented!